--- a/src/tokosembakoberkah/view/Dashboard/DashboardPanel.form
+++ b/src/tokosembakoberkah/view/Dashboard/DashboardPanel.form
@@ -263,7 +263,7 @@
         <Container class="javax.swing.JPanel" name="Bkeluar">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="49" green="31" red="14" type="rgb"/>
+              <Color blue="c1" green="5e" red="4" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
@@ -296,7 +296,7 @@
         <Container class="javax.swing.JPanel" name="Bmasuk">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="99" red="ff" type="rgb"/>
+              <Color blue="42" green="23" red="d3" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
