--- a/src/tokosembakoberkah/view/Navigation/Navigation.form
+++ b/src/tokosembakoberkah/view/Navigation/Navigation.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="99" green="99" red="0" type="rgb"/>
+      <Color blue="77" green="b9" red="22" type="rgb"/>
     </Property>
     <Property name="toolTipText" type="java.lang.String" value=""/>
   </Properties>
@@ -125,7 +125,7 @@
           <Color blue="f6" green="f6" red="f6" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/res/icon/inventory.png"/>
+          <Image iconType="3" name="/res/icon/material-management.png"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
@@ -136,13 +136,16 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="40" green="40" id="darkGray" palette="1" red="40" type="palette"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="20" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="  TOKO SEMBAKO BERKAH"/>
+        <Property name="text" type="java.lang.String" value="    TOKO SUMBER REZEKI"/>
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
